# sipm_wheel

./: .DataReader.h.swp  Attenuation.C  CharacterizeSiPMs.C  DataReader.cxx  DataReader.h  GeometricReco.C  MLECoordinates.C  MLEReco.C  README.md  SiPMCharacterization.C  WaveformAnalysis.C  WheelReco.C  histo.root  makePlots.C  output_file  setup.sh  sipm.sh  test.C
event_display/: SIPM_WHEEL_EVD.sh
event_display/pyqt/: .CMakeLists.txt.swp  CMakeLists.txt  sipm_wheel_evd.py
event_display/pyqt/config/: setup.sh
event_display/pyqt/core/io/: LinkDef.h  SiPMWheel_CoreIO.cxx  SiPMWheel_CoreIODict.cxx  SiPMWheel_CoreIODict_rdict.pcm  Test.cxx  Test.h
event_display/pyqt/gui/: sipm_wheel_gui.py
event_display/pyqt/lib/: Event_Dis_TestDict_rdict.pcm  SiPMWheel_CoreIO_rdict.pcm  libSiPMWheel_CoreIO.rootmap
event_display/pyqt/python/gui/: sipm_wheel_gui.py
event_display/root/: EventDisplay.C  ev_display_MLEReco.cxx  ev_display_MLEReco.h  ev_display_WheelReco.cxx  ev_display_WheelReco.h
event_display/sipmwheel/: CMakeLists.txt  TempCMakeLists.txt
event_display/sipmwheel/config/: setup.sh
event_display/sipmwheel/core/io/: SiPMWheel_CoreIO.cxx
event_display/sipmwheel/lib/: SiPMWheel_CoreIO_rdict.pcm
event_display/sipmwheel/python/gui/: gui.py  sipm_wheel_gui.py  view_manager.py  viewport.py
event_display/sipmwheel/python/manager/: evd_manager.py  evd_manager_base.py  io_manager.py
old_scripts/: MLEReco.C  characterizeSiPMs.C
sipmwheel/: CMakeLists.txt  README.md  characterization.root  main.cxx  outputFile.root  recoOutput.root
sipmwheel/config/: WheelConfiguration.txt  WheelConfigurationReco.txt
sipmwheel/include/: Analyzer.h  Characterizer.h  FileReader.h  Utilities.h  WaveformAlg.h
sipmwheel/src/: Analyzer.cxx  Characterizer.cxx  FileReader.cxx  WaveformAlg.cxx
